got some Matlab class generation working

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,17 +1,18 @@
 # default settings for hive-config project
 
 treatment : {
-	training-set : "AAA"
-	model-style : "BBB"
-	cluster-style : "CCC"
-	alpha-select : "DDD"
-	mu-select : "EEE"
+	training-set   : "001"
+	training-style : "002"
+	cluster-style  : "003"
+	alpha-select   : "004"
+	mu-select      : "005"
+	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
 }
 
 project : {
 	root          : [ hive-data ]
 	training-path : ${project.root}          [ results_${treatment.training-set} ]
-	model-path    : ${project.training-path} [ model_style_${treatment.model-style} ]
+	model-path    : ${project.training-path} [ model_style_${treatment.training-style} ]
 	cluster-path  : ${project.model-path}    [ cluster_style_${treatment.cluster-style} ]
 	alpha-path    : ${project.cluster-path}  [ alpha_select_${treatment.alpha-select} ]
 	mu-path       : ${project.alpha-path}    [ mu_select_${treatment.mu-select} ]
@@ -33,3 +34,30 @@ target : {
 	source-path : ${project.root}    [ target ]
 	result-path : ${project.mu-path} [ target ]
 }
+
+chemicals : [
+	{	# Dopamine
+		ix      : 1
+		colName : DA
+		name    : Dopamine
+		label   : DA
+		units   : nM
+		neutral : 0.0
+	}
+	{	# Serotonin
+		ix      : 2
+		colName : 5HT
+		name    : Serotonin
+		label   : 5-HT
+		units   : nM
+		neutral : 0.0
+	}
+	{	# pH
+		ix      : 3
+		colName : pH
+		name    : pH
+		label   : pH
+		units   : ""
+		neutral : 7.4
+	}
+]
