added command line interface, added target source enumeration, cleaned up config, cleaned up formatting

--- a/src/main/resources/hive-defaults.conf
+++ b/src/main/resources/hive-defaults.conf
@@ -1,16 +1,16 @@
 # default settings for hive-config project
 
 treatment : {
-	training-set   : "001"
-	training-style : "002"
-	cluster-style  : "003"
-	alpha-select   : "004"
-	mu-select      : "005"
-	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
+#	training-set   : "001"
+#	training-style : "002"
+#	cluster-style  : "003"
+#	alpha-select   : "004"
+#	mu-select      : "005"
+#	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
 }
 
 project : {
-	root          : [ hive-data ]
+#	root          : [ hive-data ]
 	training-path : ${project.root}          [ results_${treatment.training-set} ]
 	model-path    : ${project.training-path} [ model_style_${treatment.training-style} ]
 	cluster-path  : ${project.model-path}    [ cluster_style_${treatment.cluster-style} ]
@@ -20,7 +20,7 @@ project : {
 }
 
 training : {
-	source-path : [ ${project.training-path} [ training ] ]
+	source-path : ${project.training-path} [ training ]
 	result-path : ${project.model-path}    [ training ]
 }
 
@@ -35,8 +35,7 @@ target : {
 	result-path : ${project.mu-path} [ target ]
 }
 
-chemicals : [
-	{	# Dopamine
+dopamine : {
 		ix      : 1
 		colName : DA
 		name    : Dopamine
@@ -44,7 +43,8 @@ chemicals : [
 		units   : nM
 		neutral : 0.0
 	}
-	{	# Serotonin
+
+serotonin : {
 		ix      : 2
 		colName : 5HT
 		name    : Serotonin
@@ -52,7 +52,8 @@ chemicals : [
 		units   : nM
 		neutral : 0.0
 	}
-	{	# pH
+
+ph : {
 		ix      : 3
 		colName : pH
 		name    : pH
@@ -60,4 +61,13 @@ chemicals : [
 		units   : ""
 		neutral : 7.4
 	}
-]
+
+norepinephrine : {
+		ix      : 4
+		colName : NE
+		name    : Norepinephrine
+		label   : NE
+		units   : nM
+		neutral : 0.0
+	}
+
