pull in Matlab classes

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
 target
 .cache-main
-bin
-project/target
-commit.sh
+.cache-tests
 .worksheet
 .*.swp
-.cache-tests
+bin
+commit.sh
+project/target
+src/main/matlab/*.conf
+src/main/matlab/Chem.m
+src/main/matlab/config
+src/main/matlab/Config.m
+src/main/matlab/+hive/+cfg/TargetCatalog.m
+src/main/matlab/+hive/+cfg/TestingCatalog.m
+src/main/matlab/+hive/+cfg/TrainingCatalog.m
