--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ commit.sh
 project/target
 src/main/matlab/*.conf
 src/main/matlab/Chem.m
-src/main/matlab/config
+src/main/matlab/make-config
 src/main/matlab/Config.m
 src/main/matlab/+hive/+cfg/TargetCatalog.m
 src/main/matlab/+hive/+cfg/TestingCatalog.m
