--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ src/main/matlab/Config.m
 src/main/matlab/+hive/+cfg/TargetCatalog.m
 src/main/matlab/+hive/+cfg/TestingCatalog.m
 src/main/matlab/+hive/+cfg/TrainingCatalog.m
+matlab.mat
