--- a/.settings/org.scala-ide.sdt.core.prefs
+++ b/.settings/org.scala-ide.sdt.core.prefs
@@ -33,9 +33,9 @@ optimise=false
 recompileOnMacroDef=true
 relationsDebug=false
 scala.compiler.additionalParams=
-scala.compiler.installation=1803185598
+scala.compiler.installation=2.11
 scala.compiler.sourceLevel=2.11
-scala.compiler.useProjectSettings=true
+scala.compiler.useProjectSettings=false
 stopBuildOnError=true
 target=jvm-1.7
 unchecked=false
