first light: use scodec-stream to parse ABF file

--- a/.settings/org.scala-ide.sdt.core.prefs
+++ b/.settings/org.scala-ide.sdt.core.prefs
@@ -31,7 +31,7 @@ nowarn=false
 optimise=false
 recompileOnMacroDef=true
 relationsDebug=false
-scala.compiler.additionalParams=\ -Xsource\:2.12 -Ymacro-expand\:none
+scala.compiler.additionalParams=
 scala.compiler.installation=2041444224
 scala.compiler.useProjectSettings=true
 stopBuildOnError=true
