--- a/.classpath
+++ b/.classpath
@@ -12,13 +12,17 @@
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/com.chuusai/shapeless_2.12/srcs/shapeless_2.12-2.3.2-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/com.chuusai/shapeless_2.12/bundles/shapeless_2.12-2.3.2.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.typelevel/macro-compat_2.12/srcs/macro-compat_2.12-1.1.1-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.typelevel/macro-compat_2.12/jars/macro-compat_2.12-1.1.1.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/co.fs2/fs2-core_2.12/srcs/fs2-core_2.12-0.9.2-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/co.fs2/fs2-core_2.12/jars/fs2-core_2.12-0.9.2.jar"/>
+  <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/net.liftweb/lift-json_2.12/srcs/lift-json_2.12-3.0.1-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/net.liftweb/lift-json_2.12/jars/lift-json_2.12-3.0.1.jar"/>
+  <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.scala-lang/scalap/srcs/scalap-2.12.1-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.scala-lang/scalap/jars/scalap-2.12.1.jar"/>
+  <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_COMPILER_CONTAINER"/>
+  <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.scala-lang.modules/scala-xml_2.12/srcs/scala-xml_2.12-1.0.6-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.scala-lang.modules/scala-xml_2.12/bundles/scala-xml_2.12-1.0.6.jar"/>
+  <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/com.thoughtworks.paranamer/paranamer/srcs/paranamer-2.8-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/com.thoughtworks.paranamer/paranamer/bundles/paranamer-2.8.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.clapper/grizzled-slf4j_2.12/srcs/grizzled-slf4j_2.12-1.3.0-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.clapper/grizzled-slf4j_2.12/jars/grizzled-slf4j_2.12-1.3.0.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/ch.qos.logback/logback-classic/srcs/logback-classic-1.2.3-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/ch.qos.logback/logback-classic/jars/logback-classic-1.2.3.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/ch.qos.logback/logback-core/srcs/logback-core-1.2.3-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/ch.qos.logback/logback-core/jars/logback-core-1.2.3.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.slf4j/slf4j-api/srcs/slf4j-api-1.7.25-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.slf4j/slf4j-api/jars/slf4j-api-1.7.25.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.scalatest/scalatest_2.12/srcs/scalatest_2.12-3.0.1-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.scalatest/scalatest_2.12/bundles/scalatest_2.12-3.0.1.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.scalactic/scalactic_2.12/srcs/scalactic_2.12-3.0.1-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.scalactic/scalactic_2.12/bundles/scalactic_2.12-3.0.1.jar"/>
-  <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.scala-lang.modules/scala-xml_2.12/srcs/scala-xml_2.12-1.0.5-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.scala-lang.modules/scala-xml_2.12/bundles/scala-xml_2.12-1.0.5.jar"/>
   <classpathentry sourcepath="/Users/jwhite/.ivy2/cache/org.scala-lang.modules/scala-parser-combinators_2.12/srcs/scala-parser-combinators_2.12-1.0.4-sources.jar" kind="lib" path="/Users/jwhite/.ivy2/cache/org.scala-lang.modules/scala-parser-combinators_2.12/bundles/scala-parser-combinators_2.12-1.0.4.jar"/>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
   <classpathentry kind="output" path="bin"/>
