refactor sweep windows

--- a/src/main/matlab/treatment-burst.conf
+++ b/src/main/matlab/treatment-burst.conf
@@ -64,6 +64,15 @@ shuf-s050-ix: [ 467, 650, 986, 411, 947, 714, 309, 296, 707, 47, 658, 376, 423, 
 shuf-s010-ix: [ 787, 259, 296, 185, 771, 455, 134, 142, 853, 896, 434, 820, 391, 946, 805, 754, 609, 150, 191, 375, 663, 763, 962, 902, 186, 264, 165, 954, 450, 85, 918, 281, 257, 360, 452, 858, 197, 252, 938, 709, 118, 913, 53, 900, 832, 842, 982, 341, 32, 347, 505, 331, 382, 474, 354, 632, 981, 82, 716, 112, 74, 835, 435, 691, 422, 216, 523, 510, 40, 816, 796, 454, 883, 619, 569, 313, 529, 566, 826, 198, 786, 102, 289, 109, 857, 117, 322, 97, 715, 930, 679, 407, 277, 756, 633, 240, 406, 910, 815, 401 ]
 shuf-s001-ix: [ 920, 608, 847, 709, 331, 969, 23, 879, 271, 103 ]
 
+# sweep index for 65-second recordings
+sweep065-ix:  [ 30, 45 ]
+
+# sweep index for 103-second recordings
+sweep103-ix:  [ 60, 75 ]
+
+# sweep index for 42-second recordings
+sweep042-ix:  [ 20, 35 ]
+
 
 
 
@@ -129,18 +138,18 @@ training : {
 					${shuf-s001-ix}
                                 ]
 	time-window           : [
-					[ 30, 45 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 20, 35 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
+					${sweep065-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep042-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
 				]
 
 }
@@ -208,18 +217,18 @@ testing : {
 					${shuf-s001-ix}
                                 ]
 	time-window           : [
-					[ 30, 45 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 20, 35 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
-					[ 60, 75 ]
+					${sweep065-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep042-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
 				]
 }
 
