updates for handling idiosyncratic Lisbon acquisitions

--- a/src/main/matlab/treatment-burst.conf
+++ b/src/main/matlab/treatment-burst.conf
@@ -10,7 +10,7 @@ treatment : {
 	training-set   : "007"
 	training-style : "008"
 	cluster-style  : "001"
-	alpha-select   : "001"
+	alpha-select   : "000" # LASSO
 	mu-select      : "000"
 	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
 }
@@ -21,8 +21,8 @@ treatment : {
 chemicals : [
 	${dopamine}
 	${serotonin}
+	${norepinephrine}
 	${ph}
-	#${norepinephrine}
 ]
 
 #
@@ -96,6 +96,9 @@ training : {
 		${project.training-home}/training-C-0400Vs-097Hz/"20*"
 		${project.training-home}/training-C-0400Vs-097Hz/"20*"
 		${project.training-home}/training-C-0400Vs-097Hz/"20*"
+		${project.training-home}/training-E-uncorrelated-97Hz/"20*"
+		${project.training-home}/training-E-uncorrelated-97Hz/"20*"
+		${project.training-home}/training-O-0400Vs-010Hz/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-0400Vs-010Hz
@@ -110,6 +113,9 @@ training : {
 		${project.model-home}/training-J-0400Vs-097Hz-shuffled-010
 		${project.model-home}/training-K-0400Vs-097Hz-001
 		${project.model-home}/training-L-0400Vs-097Hz-shuffled-001
+		${project.model-home}/training-M-uncorrelated-97Hz-050
+		${project.model-home}/training-N-uncorrelated-97Hz-010
+		${project.model-home}/training-O-0400Vs-010Hz
 
 	]
 	result-path           : ${training.import-path}
@@ -136,6 +142,9 @@ training : {
 					${shuf-s010-ix}
 					${fast-s001-ix}
 					${shuf-s001-ix}
+					${fast-s050-ix}
+					${fast-s010-ix}
+					${slow-s100-ix}
                                 ]
 	time-window           : [
 					${sweep065-ix}
@@ -150,6 +159,9 @@ training : {
 					${sweep103-ix}
 					${sweep103-ix}
 					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep065-ix}
 				]
 
 }
@@ -176,6 +188,9 @@ testing : {
 		${project.model-home}/training-J-0400Vs-097Hz-shuffled-010
 		${project.model-home}/training-K-0400Vs-097Hz-001
 		${project.model-home}/training-L-0400Vs-097Hz-shuffled-001
+		${project.model-home}/training-M-uncorrelated-97Hz-050
+		${project.model-home}/training-N-uncorrelated-97Hz-010
+		${project.model-home}/training-O-0400Vs-010Hz
 	]
 	result-path : [
 		${project.mu-home}/training-A-0400Vs-010Hz
@@ -190,6 +205,9 @@ testing : {
 		${project.mu-home}/training-J-0400Vs-097Hz-shuffled-010
 		${project.mu-home}/training-K-0400Vs-097Hz-001
 		${project.mu-home}/training-L-0400Vs-097Hz-shuffled-001
+		${project.mu-home}/training-M-uncorrelated-97Hz-050
+		${project.mu-home}/training-N-uncorrelated-97Hz-010
+		${project.mu-home}/training-O-0400Vs-010Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.abf"
@@ -215,6 +233,9 @@ testing : {
 					${shuf-s010-ix}
 					${fast-s001-ix}
 					${shuf-s001-ix}
+					${fast-s050-ix}
+					${fast-s010-ix}
+					${slow-s100-ix}
                                 ]
 	time-window           : [
 					${sweep065-ix}
@@ -229,6 +250,9 @@ testing : {
 					${sweep103-ix}
 					${sweep103-ix}
 					${sweep103-ix}
+					${sweep103-ix}
+					${sweep103-ix}
+					${sweep065-ix}
 				]
 }
 
