first stab at algorithm for finding a stable location in ABF data

--- a/src/main/matlab/treatment-burst.conf
+++ b/src/main/matlab/treatment-burst.conf
@@ -119,6 +119,7 @@ training : {
 		${project.training-home}/training-O-0400Vs-010Hz/"20*"
 		${project.training-home}/training-O-0400Vs-010Hz/"20*"
 		${project.training-home}/training-O-0400Vs-010Hz/"20*"
+		${project.training-home}/training-W-uncorrelated-97Hz/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-0400Vs-010Hz
@@ -143,6 +144,7 @@ training : {
 		${project.model-home}/training-T-0400Vs-010Hz-shuffled-050
 		${project.model-home}/training-U-0400Vs-010Hz-shuffled-010
 		${project.model-home}/training-V-0400Vs-010Hz-shuffled-001
+		${project.model-home}/training-W-uncorrelated-97Hz
 
 	]
 	result-path           : ${training.import-path}
@@ -179,6 +181,7 @@ training : {
 					${oflw-shuf-s050-ix}
 					${oflw-shuf-s010-ix}
 					${oflw-shuf-s001-ix}
+					${fast-s100-ix}
                                 ]
 	time-window           : [
 					${sweep065-ix}
@@ -195,6 +198,7 @@ training : {
 					${sweep103-ix}
 					${sweep103-ix}
 					${sweep103-ix}
+					${sweepOFLW-ix}
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
@@ -239,6 +243,7 @@ testing : {
 		${project.model-home}/training-O-0400Vs-010Hz
 		${project.model-home}/training-O-0400Vs-010Hz
 		${project.model-home}/training-O-0400Vs-010Hz
+		${project.model-home}/training-W-uncorrelated-97Hz
 	]
 	result-path : [
 		${project.mu-home}/training-A-0400Vs-010Hz
@@ -263,6 +268,7 @@ testing : {
 		${project.mu-home}/training-T-0400Vs-010Hz-shuffled-050
 		${project.mu-home}/training-U-0400Vs-010Hz-shuffled-010
 		${project.mu-home}/training-V-0400Vs-010Hz-shuffled-001
+		${project.mu-home}/training-W-uncorrelated-97Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.abf"
@@ -298,6 +304,7 @@ testing : {
 					${oflw-shuf-s050-ix}
 					${oflw-shuf-s010-ix}
 					${oflw-shuf-s001-ix}
+					${fast-s100-ix}
 
                                 ]
 	time-window           : [
@@ -315,6 +322,7 @@ testing : {
 					${sweep103-ix}
 					${sweep103-ix}
 					${sweep103-ix}
+					${sweepOFLW-ix}
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
