add octaflow data (training-X) fix calibration plot scaling to accommodate different concentration ranges

--- a/src/main/matlab/treatment-burst.conf
+++ b/src/main/matlab/treatment-burst.conf
@@ -11,7 +11,7 @@ treatment : {
 	training-style : "008"
 	cluster-style  : "001"
 	alpha-select   : "000" # LASSO
-	mu-select      : "000"
+	mu-select      : "000" # NONE / SINGLE-MODEL
 	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
 }
 
@@ -87,7 +87,8 @@ sweep042-ix:  [ 20, 35 ]
 # sweep index for Octaflow (64-second) recordings
 sweepOFLW-ix: [ 44, 64 ]
 
-
+# sweep index for fast Octafllow recordings
+sweepOct065-ix: [ 45, 65 ]
 
 #
 # training data (in vitro)
@@ -120,6 +121,7 @@ training : {
 		${project.training-home}/training-O-0400Vs-010Hz/"20*"
 		${project.training-home}/training-O-0400Vs-010Hz/"20*"
 		${project.training-home}/training-W-uncorrelated-97Hz/"20*"
+		${project.training-home}/training-X-uncorrelated-97Hz/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-0400Vs-010Hz
@@ -145,6 +147,7 @@ training : {
 		${project.model-home}/training-U-0400Vs-010Hz-shuffled-010
 		${project.model-home}/training-V-0400Vs-010Hz-shuffled-001
 		${project.model-home}/training-W-uncorrelated-97Hz
+		${project.model-home}/training-X-uncorrelated-97Hz
 
 	]
 	result-path           : ${training.import-path}
@@ -182,6 +185,7 @@ training : {
 					${oflw-shuf-s010-ix}
 					${oflw-shuf-s001-ix}
 					${fast-s100-ix}
+					${fast-s100-ix}
                                 ]
 	time-window           : [
 					${sweep065-ix}
@@ -207,6 +211,7 @@ training : {
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
+					${sweepOct065-ix}
 				]
 
 }
@@ -244,6 +249,7 @@ testing : {
 		${project.model-home}/training-O-0400Vs-010Hz
 		${project.model-home}/training-O-0400Vs-010Hz
 		${project.model-home}/training-W-uncorrelated-97Hz
+		${project.model-home}/training-X-uncorrelated-97Hz
 	]
 	result-path : [
 		${project.mu-home}/training-A-0400Vs-010Hz
@@ -269,6 +275,7 @@ testing : {
 		${project.mu-home}/training-U-0400Vs-010Hz-shuffled-010
 		${project.mu-home}/training-V-0400Vs-010Hz-shuffled-001
 		${project.mu-home}/training-W-uncorrelated-97Hz
+		${project.mu-home}/training-X-uncorrelated-97Hz
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.abf"
@@ -305,6 +312,7 @@ testing : {
 					${oflw-shuf-s010-ix}
 					${oflw-shuf-s001-ix}
 					${fast-s100-ix}
+					${fast-s100-ix}
 
                                 ]
 	time-window           : [
@@ -331,6 +339,7 @@ testing : {
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
 					${sweepOFLW-ix}
+					${sweepOct065-ix}
 				]
 }
 
