added python utility to convert LVM files to HDF5 (new universal format?) for OPM-MEG experiments

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ src/main/resources/h2caseclass.sed
 src/main/resources/h2scodec.sed
 src/main/resources/scodec.scala.txt
 src/test/scala/testing.sc
+__pycache__
