--- a/src/main/matlab/cluster/treatment-burst-008-elastic.conf
+++ b/src/main/matlab/cluster/treatment-burst-008-elastic.conf
@@ -10,7 +10,7 @@ treatment : {
 	training-set   : "008"
 	training-style : "008"
 	cluster-style  : "001"
-	alpha-select   : "000" # LASSO
+    alpha-select   : "001" # choose best
 	mu-select      : "000" # NONE / SINGLE-MODEL
 	name           : ${treatment.training-set}-${treatment.training-style}-${treatment.cluster-style}-${treatment.alpha-select}-${treatment.mu-select}
 }
@@ -24,7 +24,6 @@ chemicals : [
 	${norepinephrine}
 	${hydroxyindoleaceticacid}
 	${ph}
-    ${kynurenicacid}
 ]
 
 #
@@ -35,7 +34,7 @@ chemicals : [
 #   "*" matches all, "**" matches all, recusively
 #
 project : {
-	home          : /mnt/nfs/proj/in-vitro/iterate
+	home          : /mnt/nfs/proj/pd/jason/iterate
 	training-home : ${project.home}/results_${treatment.training-set}
 	model-home    : ${project.training-home}/model_style_${treatment.training-style}
 	cluster-home  : ${project.model-home}/cluster_style_${treatment.cluster-style}
@@ -266,16 +265,6 @@ hydroxyindoleaceticacid : {
 		name	: HydroxyindoleaceticAcid
 		label	: 5-HIAA
 		prefix	: hiaa
-		units	: nM
-		neutral	: 0.0
-	}
-
-kynurenicacid : {
-		ix	: 6
-		colName : KYNA
-		name	: KynurenicAcid
-		label	: KYNA
-		prefix	: kyna
 		units	: nM
 		neutral	: 0.0
 	}
