updates to support pH datasets without HLH or LHL updates to support non-ABF datasdets

--- a/src/main/matlab/cluster/treatment-burst-008-elastic.conf
+++ b/src/main/matlab/cluster/treatment-burst-008-elastic.conf
@@ -24,6 +24,7 @@ chemicals : [
 	${norepinephrine}
 	${hydroxyindoleaceticacid}
 	${ph}
+    ${kynurenicacid}
 ]
 
 #
@@ -34,7 +35,7 @@ chemicals : [
 #   "*" matches all, "**" matches all, recusively
 #
 project : {
-	home          : /mnt/nfs/proj/pd/jason/iterate
+	home          : /mnt/nfs/proj/in-vitro/iterate
 	training-home : ${project.home}/results_${treatment.training-set}
 	model-home    : ${project.training-home}/model_style_${treatment.training-style}
 	cluster-home  : ${project.model-home}/cluster_style_${treatment.cluster-style}
@@ -265,6 +266,16 @@ hydroxyindoleaceticacid : {
 		name	: HydroxyindoleaceticAcid
 		label	: 5-HIAA
 		prefix	: hiaa
+		units	: nM
+		neutral	: 0.0
+	}
+
+kynurenicacid : {
+		ix	: 6
+		colName : KYNA
+		name	: KynurenicAcid
+		label	: KYNA
+		prefix	: kyna
 		units	: nM
 		neutral	: 0.0
 	}
