added training-C human CF data

--- a/src/main/matlab/cluster/treatment-010-010.conf
+++ b/src/main/matlab/cluster/treatment-010-010.conf
@@ -7,7 +7,7 @@ project.name : iterate
 # settings for this treatment
 #
 treatment : {
-	training-set   : "010" # rodent invitro data
+	training-set   : "010" # modern invitro data
 	training-style : "010" # leave-some-out-in-training + sqrt/square
 	cluster-style  : "001"
 	alpha-select   : "000" # LASSO
@@ -25,6 +25,8 @@ chemicals : [
 	${hydroxyindoleaceticacid}
 	${ph}
     ${kynurenicacid}
+	${acetylcholine}
+	${glutamate}
 ]
 
 #
@@ -102,10 +104,12 @@ training : {
 	source-spec        : [
 		${project.training-home}/training-A-CFR-RBE/"20*"
 		${project.training-home}/training-B-MMA-RBE/"20*"
+		${project.training-home}/training-C-CF-RBE/"20*"
 	]
 	import-path        : [
 		${project.model-home}/training-A-CFR-RBE
 		${project.model-home}/training-B-MMA-RBE
+		${project.model-home}/training-C-CF-RBE
 
 	]
 	result-path           : ${training.import-path}
@@ -122,8 +126,10 @@ training : {
 	vgram-window          : [
 					${fast-s100-ix}
 					${fast-s100-ix}
+					${fast-s100-ix}
                                 ]
 	time-window           : [
+					${sweep103-ix}
 					${sweep103-ix}
 					${sweep103-ix}
 				]
@@ -142,10 +148,12 @@ testing : {
 	import-path : [
 		${project.model-home}/training-A-CFR-RBE
 		${project.model-home}/training-B-MMA-RBE
+		${project.model-home}/training-C-CF-RBE
 	]
 	result-path : [
 		${project.mu-home}/training-A-CFR-RBE
 		${project.mu-home}/training-B-MMA-RBE
+		${project.mu-home}/training-C-CF-RBE
 	]
 	label-catalog-file    : ${project.model-home}/TestingLabels.csv
 	raw-spec              : "*.(abf|h5)"
@@ -161,9 +169,11 @@ testing : {
 	vgram-window          : [
 					${fast-s100-ix}
 					${fast-s100-ix}
+					${fast-s100-ix}
 
                                 ]
 	time-window           : [
+					${sweep103-ix}
 					${sweep103-ix}
 					${sweep103-ix}
 				]
@@ -247,3 +257,25 @@ kynurenicacid : {
 		units	: nM
 		neutral	: 0.0
 	}
+
+acetylcholine : {
+		ix 		: 7
+		colName	: ACh
+		name	: Acetylcholine
+		label	: ACh
+		prefix	: ach
+		units	: nM
+		neutral	: 0.0
+	}
+
+glutamate : {
+		ix		: 8
+		colName	: Glu
+		name	: Glutamate
+		label	: Glu
+		prefix	: glu
+		units	: nM
+		neutral	: 0.0
+	}
+
+
