--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ src/main/matlab/report.csv
 src/main/matlab/resave6.m
 src/main/matlab/test.m
 src/main/matlab/vgramChangeDistribution_multianalyte.mlx
+.Rproj.user
